Ajout du lien Afficher plus dans partie hebergement

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                     </a>
                                     </div>
                         </div>
-                    
+                        <a id="afficher_plus" href="" title="Afficher plus">Afficher plus</a>
                     </div>
                 </div>
             </div>
