Amélioration des blocs existant

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                             <div class="conteneur_vignette">
                                 <div class="image" style="background-image:url(Projet2Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg)"><img src="Projet2Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" /></div>
                                 <b class="nom_hebergement">Auberge la Cannebière</b>
-                                <p>Nuit à partir de 25€</p>
+                                <p>Nuit à partir de <b>25€</b></p>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star star_grise"></i>
                             </div>
                             </a>
                             </div>
@@ -100,8 +101,9 @@
                                 <a href="www.google.com">
                                 <div class="conteneur_vignette">
                                     <div class="image" style="background-image:url(Projet2Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg)"><img src="Projet2Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="" /></div>
-                                    <b class="nom_hebergement">Auberge la Cannebière</b>
-                                    <p>Nuit à partir de 25€</p>
+                                    <b class="nom_hebergement">Hôtel du port</b>
+                                    <p>Nuit à partir de 52<b>€</b></p>
+                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                                 </div>
                                 </a>
                                 </div>
@@ -110,8 +112,9 @@
                                     <a href="www.google.com">
                                     <div class="conteneur_vignette">
                                         <div class="image" style="background-image:url(Projet2Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg)"><img src="Projet2Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="" /></div>
-                                        <b class="nom_hebergement">Auberge la Cannebière</b>
-                                        <p>Nuit à partir de 25€</p>
+                                        <b class="nom_hebergement">Hôtel Les mouettes</b>
+                                        <p>Nuit à partir de 76<b>€</b></p>
+                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star star_grise"></i>
                                     </div>
                                     </a>
                                     </div>
@@ -124,8 +127,9 @@
                             <a href="www.google.com">
                             <div class="conteneur_vignette">
                                 <div class="image" style="background-image:url(Projet2Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg)"><img src="Projet2Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="" /></div>
-                                <b class="nom_hebergement">Auberge la Cannebière</b>
-                                <p>Nuit à partir de 25€</p>
+                                <b class="nom_hebergement">Hôtel de la mer</b>
+                                <p>Nuit à partir de 46<b>€</b></p>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star star_grise"></i><i class="fas fa-star star_grise"></i>
                             </div>
                             </a>
                             </div>
@@ -134,8 +138,9 @@
                                 <a href="www.google.com">
                                 <div class="conteneur_vignette">
                                     <div class="image" style="background-image:url(Projet2Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg)"><img src="Projet2Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="" /></div>
-                                    <b class="nom_hebergement">Auberge la Cannebière</b>
-                                    <p>Nuit à partir de 25€</p>
+                                    <b class="nom_hebergement">Auberge Le Panier</b>
+                                    <p>Nuit à partir de <b>23€</b></p>
+                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star star_grise"></i>
                                 </div>
                                 </a>
                                 </div>
@@ -144,8 +149,9 @@
                                     <a href="www.google.com">
                                     <div class="conteneur_vignette">
                                         <div class="image" style="background-image:url(Projet2Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg)"><img src="Projet2Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="" /></div>
-                                        <b class="nom_hebergement">Auberge la Cannebière</b>
-                                        <p>Nuit à partir de 25€</p>
+                                        <b class="nom_hebergement">Hôtel chez Amina</b>
+                                        <p>Nuit à partir de 96<b>€</b></p>
+                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                                     </div>
                                     </a>
                                     </div>
@@ -166,7 +172,7 @@
             <div class="marge_conteneur_2">
                 <div class="conteneur_hebergement_2">
                     <div class="texte_et_vignettes">
-                        <h2 class="titre_partie_1">Hébergements à Marseille</h2>
+                        <h2 class="titre_partie_1">Les plus populaires</h2>
                         
                         
                         <div class="conteneur_populaires">
@@ -178,8 +184,9 @@
                                         <div class="alignement_image_vignette">
                                             <div class="image_2" style="background-image:url(Projet2Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg)"><img src="Projet2Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="" /></div>
                                             <div class="texte_vignette">
-                                                <b>Auberge la Cannebière</b>
-                                                <p>Nuit à partir de 25€</p>
+                                                <b>Hôtel Le soleil du matin</b>
+                                                <p>Nuit à partir de 128<b>€</b></p>
+                                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -192,8 +199,9 @@
                                         <div class="alignement_image_vignette">
                                             <div class="image_2" style="background-image:url(Projet2Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg)"><img src="Projet2Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" /></div>
                                             <div class="texte_vignette">
-                                                <b>Auberge la Cannebière</b>
-                                                <p>Nuit à partir de 25€</p>
+                                                <b>Au cœur de l'eau Chambres d'hôtes</b>
+                                                <p>Nuit à partir de 71<b>€</b></p>
+                                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star star_grise"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -206,8 +214,9 @@
                                             <div class="alignement_image_vignette">
                                                 <div class="image_2" style="background-image:url(Projet2Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg)"><img src="Projet2Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="" /></div>
                                                 <div class="texte_vignette">
-                                                    <b>Auberge la Cannebière</b>
-                                                    <p>Nuit à partir de 25€</p>
+                                                    <b>Hôtel Tout bleu et Blanc</b>
+                                                    <p>Nuit à partir de 68<b>€</b></p>
+                                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star star_grise"></i>
                                                 </div>
                                             </div>
                                         </div>
