Ajout du footer

--- a/index.html
+++ b/index.html
@@ -292,6 +292,37 @@
 
         </div>
         <!--Fin partie activités à Marseille-->
-    
+        <!-- Partie Footer-->
+        <footer>
+
+
+            <div class="grid_footer">
+
+
+                <div class="parties_footer">
+                    <p class="titre_footer">A propos</p>
+                    <a class="lien_footer" href="" title="Fonctionnement du site">Fonctionnement du site</a>
+                    <a class="lien_footer" href="" title="Conditions générales de vente">Conditions générales de vente</a>
+                    <a class="lien_footer" href="" title="Données et confidentialité">Données et confidentialité</a>
+                </div>
+
+                <div class="parties_footer">
+                    <p class="titre_footer">Nos hébergements</p>
+                    <a class="lien_footer" href="" title="Charte qualité">Charte qualité</a>
+                    <a class="lien_footer" href="" title="Soumettre votre hôtel">Soumettre votre hôtel</a>
+                </div>
+
+                <div class="parties_footer">
+                    <p class="titre_footer">Assitance</p>
+                    <a class="lien_footer" href="" title="Centre d'aide">Centre d'aide</a>
+                    <a class="lien_footer" href="" title="Nous contacter">Nous contacter</a>
+                </div>
+
+
+            </div>
+
+
+        </footer>
+        <!-- Fin partie Footer-->
     
     </body>
