Ajout partie info

--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
         </div>
         <!--Fin partie filtres-->
 
+        <!-- Partie info -->
+        <div>
+            <i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville
+        </div>
+        <!-- Fin partie info -->
+        
         <!--Partie hébergements à Marseille-->
         <div class="partie_1_conteneur">
             
