modification noms filtres

--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
                 <div class="icone_filtres">
                     <i class="fas fa-money-bill-wave"></i>
                 </div>
-                <p class="texte_filtres">économique</p>
+                <p class="texte_filtres">Économique</p>
             </div>
 
             <div class="icone_texte">
                 <div class="icone_filtres">
                     <i class="fas fa-child"></i>
                 </div>
-                <p class="texte_filtres">économique</p>
+                <p class="texte_filtres">Familial</p>
             </div>
 
             <div class="icone_texte">
                 <div class="icone_filtres">
                     <i class="fas fa-heart"></i>
                 </div>
-                <p class="texte_filtres">économique</p>
+                <p class="texte_filtres">Romantique</p>
             </div>
 
             <div class="icone_texte">
                 <div class="icone_filtres">
                     <i class="fas fa-dog"></i>
                 </div>
-                <p class="texte_filtres">économique</p>
+                <p class="texte_filtres">Animaux autorisés</p>
             </div>
         </div>
         <!--Fin partie filtres-->
