Ajout responsive tablette

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="tablette.css" />
+        <link rel="stylesheet" href="mobile.css" />
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet" />
         <script src="https://kit.fontawesome.com/7cfff6b176.js" crossorigin="anonymous"></script>
         <title>Reservia</title>
@@ -274,7 +276,7 @@
                     </a>
             </div>
 
-            <div>
+            <div class="double_vignettes">
             <div class="vignette_activites">
                     <a class="lien_activites" href="www.google.com">
                         <div class="image_activites_2" style="background-image:url(Projet2Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg)"><img src="Projet2Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" /></div>
@@ -297,7 +299,7 @@
                     </a>
             </div>
 
-            <div>
+            <div class="double_vignettes">
             <div class="vignette_activites">
                     <a class="lien_activites" href="www.google.com">
                         <div class="image_activites_2" style="background-image:url(Projet2Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg)"><img src="Projet2Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" /></div>
