Ajustement du site en fonction de la maquette

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!--Fin partie filtres-->
 
         <!-- Partie info -->
-        <div>
+        <div class="conteneur_info">
             <i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville
         </div>
         <!-- Fin partie info -->
@@ -222,13 +222,17 @@
                             
                             <div class="marge_vignette_2">
                                 <a href="www.google.com">
-                                    <div class="conteneur_vignette">
+                                    <div class="conteneur_vignette_2">
                                         <div class="alignement_image_vignette">
                                             <div class="image_2" style="background-image:url(Projet2Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg)"><img src="Projet2Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="" /></div>
                                             <div class="texte_vignette">
-                                                <b>Hôtel Le soleil du matin</b>
-                                                <p>Nuit à partir de 128<b>€</b></p>
-                                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                                <div class="conteneur_texte_populaires">
+                                                    <b>Hôtel Le soleil du matin</b>
+                                                    <p>Nuit à partir de 128<b>€</b></p>
+                                                </div>
+                                                <div class="conteneur_etoiles">
+                                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -237,13 +241,17 @@
 
                             <div class="marge_vignette_2">
                                 <a href="www.google.com">
-                                    <div class="conteneur_vignette">
+                                    <div class="conteneur_vignette_2">
                                         <div class="alignement_image_vignette">
                                             <div class="image_2" style="background-image:url(Projet2Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg)"><img src="Projet2Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" /></div>
                                             <div class="texte_vignette">
-                                                <b>Au cœur de l'eau Chambres d'hôtes</b>
-                                                <p>Nuit à partir de 71<b>€</b></p>
-                                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star star_grise"></i>
+                                                <div class="conteneur_texte_populaires">
+                                                    <b>Au cœur de l'eau Chambres d'hôtes</b>
+                                                    <p>Nuit à partir de 71<b>€</b></p>
+                                                </div>
+                                                <div class="conteneur_etoiles">
+                                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star star_grise"></i>
+                                                    </div>
                                             </div>
                                         </div>
                                     </div>
@@ -252,13 +260,17 @@
                             
                                 <div class="marge_vignette_2">
                                     <a href="www.google.com">
-                                        <div class="conteneur_vignette">
+                                        <div class="conteneur_vignette_2">
                                             <div class="alignement_image_vignette">
                                                 <div class="image_2" style="background-image:url(Projet2Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg)"><img src="Projet2Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="" /></div>
                                                 <div class="texte_vignette">
-                                                    <b>Hôtel Tout bleu et Blanc</b>
-                                                    <p>Nuit à partir de 68<b>€</b></p>
-                                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star star_grise"></i>
+                                                    <div class="conteneur_texte_populaires">
+                                                        <b>Hôtel Tout bleu et Blanc</b>
+                                                        <p>Nuit à partir de 68<b>€</b></p>
+                                                    </div>
+                                                    <div class="conteneur_etoiles">
+                                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star star_grise"></i>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -287,7 +299,7 @@
 
             <div class="vignette_activites">
                     <a class="lien_activites" href="www.google.com">
-                        <div class="image_activites" style="background-image:url(Projet2Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg)"><img src="Projet2Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="" /></div>
+                        <div class="image_activites" style="background-image:url(Projet2Reservia/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg)"><img src="Projet2Reservia/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="" /></div>
                         <p class="texte_activites">Vieux Port</p>
                     </a>
             </div>
@@ -295,13 +307,13 @@
             <div class="double_vignettes">
             <div class="vignette_activites">
                     <a class="lien_activites" href="www.google.com">
-                        <div class="image_activites_2" style="background-image:url(Projet2Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg)"><img src="Projet2Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" /></div>
+                        <div class="image_activites_3" style="background-image:url(Projet2Reservia/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg)"><img src="Projet2Reservia/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" /></div>
                         <p class="texte_activites">Port de Promègues</p>
                     </a>
             </div>
             <div class="vignette_activites">
                     <a class="lien_activites" href="www.google.com">
-                        <div class="image_activites_2" style="background-image:url(Projet2Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg)"><img src="Projet2Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="" /></div>
+                        <div class="image_activites_4" style="background-image:url(Projet2Reservia/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg)"><img src="Projet2Reservia/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="" /></div>
                         <p class="texte_activites">Îles du Frioul</p>
                     </a>
             </div>
@@ -310,7 +322,7 @@
 
             <div class="vignette_activites">
                     <a class="lien_activites" href="www.google.com">
-                        <div class="image_activites" style="background-image:url(Projet2Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg)"><img src="Projet2Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="" /></div>
+                        <div class="image_activites" style="background-image:url(Projet2Reservia/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg)"><img src="Projet2Reservia/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="" /></div>
                         <p class="texte_activites">Parc National des Calanques</p>
                     </a>
             </div>
@@ -318,13 +330,13 @@
             <div class="double_vignettes">
             <div class="vignette_activites">
                     <a class="lien_activites" href="www.google.com">
-                        <div class="image_activites_2" style="background-image:url(Projet2Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg)"><img src="Projet2Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" /></div>
+                        <div class="image_activites_2" style="background-image:url(Projet2Reservia/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg)"><img src="Projet2Reservia/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" /></div>
                         <p class="texte_activites">Notre-Dame-de-la-Garde</p>
                     </a>
             </div>
             <div class="vignette_activites">
                     <a class="lien_activites" href="www.google.com">
-                        <div class="image_activites_2" style="background-image:url(Projet2Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg)"><img src="Projet2Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="" /></div>
+                        <div class="image_activites_2" style="background-image:url(Projet2Reservia/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg)"><img src="Projet2Reservia/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="" /></div>
                         <p class="texte_activites">Parc Longchamp</p>
                     </a>
             </div>
