--- a/index.html
+++ b/index.html
@@ -16,23 +16,24 @@
 
         <!-- Partie header -->
         <header>
-            
-            <div id="conteneur_liens_header">
-                <div id="nav_1">
-                    <img id="logo" src="Projet2Reservia/images/logo/Reservia.svg" alt="Reservia">
-                    <div class="test3">
-                        <a class="liens_header" href="#titre_partie_1" title="">Hébergements</a>
+            <nav>
+                <div id="conteneur_liens_header">
+                    <div id="nav_1">
+                        <img id="logo" src="Projet2Reservia/images/logo/Reservia.svg" alt="Reservia">
+                        <div class="test3">
+                            <a class="liens_header" href="#titre_partie_1" title="">Hébergements</a>
+                        </div>
+                    </div>
+                    <div id="nav_2">
+                        <div class="test4">
+                            <a class="liens_header" href="#titre_activites" title="">Activités</a>
+                        </div>
+                        <div class="test5">
+                            <a class="sinscrire" href="" title="">S'inscrire</a>
+                        </div>
                     </div>
                 </div>
-                <div id="nav_2">
-                    <div class="test4">
-                        <a class="liens_header" href="#titre_activites" title="">Activités</a>
-                    </div>
-                    <div class="test5">
-                        <a class="sinscrire" href="" title="">S'inscrire</a>
-                    </div>
-                </div>
-            </div>
+            </nav>
         </header>
         <!-- Fin Partie header -->
         
@@ -370,7 +371,7 @@
                 </div>
 
                 <div class="parties_footer">
-                    <div class="div_footer"><p class="titre_footer">Nos hébergements</p></div>
+                    <p class="titre_footer">Nos hébergements</p>
                     <div class="div_footer"><a class="lien_footer" href="" title="Charte qualité">Charte qualité</a></div>
                     <div class="div_footer"><a class="lien_footer" href="" title="Soumettre votre hôtel">Soumettre votre hôtel</a></div>
                 </div>
