--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="desktop.css" />
-        <link rel="stylesheet" href="tablette.css" />
-        <link rel="stylesheet" href="mobile.css" />
+        <link rel="stylesheet" href="styles/desktop.css" />
+        <link rel="stylesheet" href="styles/tablette.css" />
+        <link rel="stylesheet" href="styles/mobile.css" />
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet" />
         <script src="https://kit.fontawesome.com/7cfff6b176.js" crossorigin="anonymous"></script>
         <title>Reservia</title>
