Ajout résolution intermédiaire desktop-tablette, réparation partie recherche mobile et réctification partie hébergement desktop

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles/desktop.css" />
+        <link rel="stylesheet" href="styles/littledesktop.css" />
         <link rel="stylesheet" href="styles/tablette.css" />
         <link rel="stylesheet" href="styles/mobile.css" />
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet" />
@@ -41,7 +42,7 @@
         <p id="texte_1">En plein centre ville ou en pleine nature</p>
 
         <!--Partie formulaire de recherche-->
-        <div>
+        <div class="bordure_mobile">
             <div class="conteneur_recherche">
             
                 <div class="sous_conteneur_recherche">
@@ -388,5 +389,4 @@
 
         </footer>
         <!-- Fin partie Footer-->
-    ghgfhgfhgfhgfh
     </body>
